# CoLoMo

./: .env.example  .gitignore  README.md  USAGE.md  colomo_config.yaml.template
.claude-plugin/: marketplace.json  plugin.json  template.json
agents/: colomo.md
commands/: ml.md
docs/: CONTRIBUTING.md  SETUP.md
rules/ml/: coding-style.md  patterns.md
rust_watchdog/: Cargo.toml  README.md  settings.yaml
rust_watchdog/src/: advisor.rs  agent_runner.rs  config.rs  env_check.rs  gpu_monitor.rs  journal.rs  lib.rs  llm.rs  llm_agent.rs  main.rs  monitor.rs  project_creator.rs  settings.rs  summarizer.rs  tui.rs  watchdog.rs
rust_watchdog/src/tools/: api_tool.rs  bash_tool.rs  file_tools.rs  mod.rs
rust_watchdog/templates/: rules.md
rust_watchdog/templates/docs/: llm.md  pretrain.md  qa.md  training.md
rust_watchdog/templates/model_templates/pytorch-snippets/: extract_imagenet_multi_conv_features.py  finetune_fc.py  l1_regularization.py
rust_watchdog/templates/model_templates/pytorch-template/: parse_config.py
rust_watchdog/templates/model_templates/resnet18-pytorch/: resnet18.ipynb
rust_watchdog/tests/: advisor_test.rs  config_io_test.rs  gpu_monitor_test.rs  journal_test.rs  watchdog_recent_lines_test.rs
scripts/: cc-pipeline.sh  cc-verify.sh  use_template.sh
skills/ml-training/: SKILL.md
skills/research-mode/: SKILL.md
templates/docs/: lora.md  rag.md  transformer.md
templates/model_templates/: index.json  pytorch.py  resnet18.py  tools.py
templates/pytorch-snippets/: checkpoint_save_load.py  classification_eval.py  get_current_lr.py  (+10 more)
(+3 files in other folders)
