[package]
name = "rust_watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
ratatui-kit = { version = "0.5.9", features = ["store"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros", "process", "io-util", "fs"] }
futures = "0.3"
once_cell = "1"
crossterm = "0.28"
arboard = "3"
rig-core = "0.2"
sysinfo = "0.32"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.27.0"
